eks/locust-master-deployment.yaml
#$ kubectl port-forward svc/locust-master 8089:8089 -n yournamespace
# ingress .yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: locust-master
  labels:
    name: locust-master
spec:
  replicas: 1
  selector:
    matchLabels:
      app: locust-master
  template:
    metadata:
      labels:
        app: locust-master
        name: locust-master
        role: master
    spec:
      volumes:
      - name: locust-volume
        configMap:
          name: locust-cm
      containers:
        - name: locust-master
          image: 622377744909.dkr.ecr.eu-central-1.amazonaws.com/k8s/locust:latest # Locust version
          #imagePullPolicy: Never
          resources:
            limits:
              cpu: 200m
            requests:
              cpu: 100m
          volumeMounts:
          - name: locust-volume
            mountPath: /locust-tasks
          ports:
            - name: loc-master-web
              containerPort: 8089
              protocol: TCP
            - name: loc-master-p1 
              containerPort: 5557
              protocol: TCP
            - name: loc-master-p2
              containerPort: 5558
              protocol: TCP
          livenessProbe:
            periodSeconds: 30
            initialDelaySeconds: 10
            timeoutSeconds: 30
            failureThreshold: 2
            httpGet:
              path: /
              port: 8089
          readinessProbe:
            initialDelaySeconds: 5
            periodSeconds: 30
            timeoutSeconds: 30
            failureThreshold: 2
            httpGet:
              path: /
              port: 8089
      restartPolicy: Always
