eks/locust-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: locust-worker
  labels:
    name: locust-worker
spec:
  replicas: 2
  selector:
    matchLabels:
      app: locust-worker
  template:
    metadata:
      labels:
        app: locust-worker
        name: locust-worker
        role: worker
    spec:
      volumes:
      - name: locust-volume
        configMap:
          name: locust-cm
      containers:
        - name: locust-worker
          image: 622377744909.dkr.ecr.eu-central-1.amazonaws.com/k8s/locust:latest # Locust version
          #imagePullPolicy: Never
          resources:
            limits:
              cpu: 200m
            requests:
              cpu: 100m
          volumeMounts:
          - name: locust-volume
            mountPath: /locust-tasks/
---
apiVersion: v1
kind: Service
metadata:
  name: locust-master
  labels:
    name: locust-master
spec:
  type: LoadBalancer
  selector:
    name: locust-master
    role: master  
  ports:
    - port: 8089
      protocol: TCP
      name: master-web
    - port: 5557
      protocol: TCP
      name: master-port-1
    - port: 5558
      protocol: TCP
      name: master-port-2
